--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -1,6 +1,7 @@
 .search {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 
     .row {
         gap: var(--space-tiny);
